Проект 4 спринта готов к проверке №2. perf: замена ArrayList на LinkedList в InMemoryHistoryManager. fix: проверка task на null в методе add(Task task) в классе InMemoryHistoryManager.